syntax = "proto3";

package user;

service UserService {
  rpc Register(ReisterRequest) returns (RegisterResponse) {}
}

message RegisterRequest {
  string firstName =1;
  string lastName =2;
  string email =3;
  string phoneNumber =4;
  string password =5;
  string role  =6 ;
}

message RegisterResponse {
string firstName =1;
  string lastName =2;
  string email =3;
  string phoneNumber =4;
}